# zk_study_thaler

./: .gitignore
plonk_vs_qap/: Cargo.toml  README.md
plonk_vs_qap/src/: main.rs  plonk.rs  snark.rs
sumcheck/: Cargo.toml
sumcheck/src/: lib.rs  prover.rs  verifier.rs
